2004-12-20  Diego Novillo  <dnovillo@redhat.com>

	PR tree-optimization/19080

	Merge from tree-cleanup-branch

	* tree-flow-inline.h (clear_call_clobbered): New function.
	* tree-ssa-alias.c (init_alias_info): Call it.

2004-12-20  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.md (sse2_movsd): Remove ix86_binary_operator_ok
	check.

2004-12-20  Steven Bosscher  <stevenb@suse.de>
	    Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/18191
	PR middle-end/18965
	PR middle-end/18999
	* expr.c (categorize_ctor_elements_1): Count the total number
	of elements in the constructor.
	(categorize_ctor_elements): Return it in a new argument.
	* tree.h (categorize_ctor_elements): Adjust prototype.
	* gimplify.c (gimplify_init_ctor_eval_range): New.
	(gimplify_init_ctor_eval): Gimplify RANGE_EXPR.
	(gimplify_init_constructor): Block clear the object if the
	constructor has fewer elements than the object type.  Only try
	to add assignments to individual elements when we have to.

2004-12-20  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_init_mmx_sse_builtins): Use 
	long_long_integer_type_node in building V2DI_type_node.

	* config/i386/emmintrin.h: Use __vector_size__ instead of vector_size.
	* config/i386/mmintrin.h, config/i386/xmmintrin.h: Likewise.

2004-12-20  Ben Elliston  <bje@au.ibm.com>

	* doc/md.texi (Expander Definitions): Use @emph instead of @strong
	around Note: text to workaround a limitation of the Info format.
	* doc/cpp.texi (Invocation): Likewise.
	* doc/cppopts.texi: Likewise.

2004-12-19  Dale Johannesen  <dalej@apple.com>

	* tree-ssa-loop-ivopts.c (contains_abnormal_ssa_name_p):  Don't
	reference operand 1 of ADDR_EXPRs.

2004-12-19  Mark Mitchell  <mark@codesourcery.com>

	* defaults.h (ASM_OUTPUT_INTERNAL_LABEL): New macro.
	* output.h (assemble_name_raw): Declare it.
	* system.h (ASM_OUTPUT_INTERNAL_LABEL): Do not poison it.
	* varasm.c (assemble_name_raw): New function.
	(assemble_name): Use it.