@@ -1,3 +1,8 @@
+2004-12-20  Matt Austern <austern@apple.com>
+
+	PR c++/19044
+	* decl.c (make_rtl_for_nonlocal_decl): Use set_builtin_user_assembler_name
+	
 2004-12-19  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (note_decl_for_pch): New function.
