@@ -1,3 +1,8 @@
+2004-12-20  Matt Austern  <austern@apple.com>
+
+	PR c++/19044
+	* g++.dg/ext/builtin6.C: New
+	
 2004-12-20  Diego Novillo  <dnovillo@redhat.com>
 
 	PR tree-optimization/19080
