@@ -1,3 +1,10 @@
+2004-12-20  Matt Austern  <austern@apple.com>
+
+	PR c++/19044
+	* c-common.c (set_builtin_user_assembler_name): New.
+	* c-common.h (set_builtin_user_assembler_name): Declare.
+	* c-decl.c (finish_decl): Use set_builtin_user_assembler_name
+	
 2004-12-20  Diego Novillo  <dnovillo@redhat.com>
 
 	PR tree-optimization/19080
